--- a/css/style.css
+++ b/css/style.css
@@ -303,4 +303,147 @@ section>article>.wrap .main_box1>div ,section>article>.wrap .main_box2>div ,sect
 .box_wrap2, .box_wrap3, .box_wrap4{
     display: none;
 }
+#community{
+    background: #feebd1;
+}
+#community>.wrap{
+    padding-bottom: 80px;
+}
+#community>.wrap>h3{
+    padding-top: 50px;
+}
+#sns{
+    padding-bottom: 30px;
+}
+#community>.wrap>span{
+    padding-bottom: 50px;
+}
+.community_wrap{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    justify-content: space-between;
+}
+#community_l{
+    width: 30%;
+    height: 100%;
+}
+#community_m{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
 
+}
+#community_m h4,#community_r h4{
+    color: #fff;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 400;
+}
+
+#community_m p,#community_r p{
+margin-top: 20px;
+color: #fff;
+font-size: 16px;
+line-height: 20px;
+font-weight: 300;
+}
+#community_m>div{
+    padding-bottom: 50px;
+}
+#community_r{
+    width: 30%;
+}
+.video{
+    background-image: url(/images/vod_bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 50%;
+}
+.video>.video_text{
+    padding: 30px;
+}
+
+.story{
+    height: 30%;
+    background: #91c749 url(/images/bg_comm_tab04.png) no-repeat right;
+}
+.story>.story_text,.recipe_text,.notice_text,.shop_text{
+    padding: 30px;
+}
+#community_r{
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#community_r>div{
+    height: 33%;
+}
+#community_r .recipe{
+    background: #6fc8e9;
+}
+#community_r .notice{
+    background: #fff;
+}
+#community_r .notice>.notice_text h4{
+    color: #222;
+}
+#community_r .notice>.notice_text p{
+    color: #666;
+}
+#community_r .shop{
+    background: #c38ef2;
+}
+footer{
+    height: 185px;
+}
+footer>.wrap{
+    display: flex;
+    justify-content: space-around;
+    height: 100%;
+}
+footer>.wrap>.footer_l{
+    padding-top: 50px;
+}
+
+footer>.wrap>div{
+    height: 100%;
+}
+footer .footer_menu{
+    padding-bottom: 20px;
+    color: #666;
+    padding-top: 30px;
+    display: flex;
+    width: 450px;
+    justify-content: space-between;
+}
+footer .footer_menu a{
+    display: block;
+    font-size: 14px;
+}
+footer>.wrap>.footer_m address{
+    font-size: 12px;
+    color: #999;
+}
+footer>.wrap>.footer_m p{
+    color: #bbb;
+    padding-top: 20px;
+}
+footer>.wrap>.footer_r{
+    padding-top: 30px;
+    display: flex;
+    width: 440px;
+    justify-content: space-between;
+}
+#footer_sns{
+    width: 175px;
+    display: flex;
+    justify-content: space-around;
+}
+footer>.wrap>.footer_r .footer_family{
+    display: flex;
+    flex-direction: column;
+}
