--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ section>article>.wrap .main_box1>div ,section>article>.wrap .main_box2>div ,sect
 #community>.wrap>h3{
     padding-top: 50px;
 }
-#sns{
+#com_sns{
     padding-bottom: 30px;
 }
 #community>.wrap>span{
