--- a/css/style.css
+++ b/css/style.css
@@ -558,6 +558,9 @@ padding: 50px 0;
     font-size: 18px;
     font-weight: 400;
 }
+#company_start{
+    margin-bottom: 50px;
+}
 #company_start .wrap>#sub_tab li.on{
     border-color: #ff6a00;
     border-bottom: 0;
@@ -566,9 +569,6 @@ padding: 50px 0;
 .active{
     display: block;
 }
-
-
-
 
 
 
@@ -726,7 +726,87 @@ padding: 50px 0;
     margin-bottom: 30px;
     padding-bottom: 60px
 }
+/* History 부문 */
+#company_start .company_list .company_history .history-tab{
 
+    width: 560px;
+    margin: 0 auto 40px;
+    overflow: hidden;
+}
+
+#company_history>div>h3{
+    padding-top: 80px;
+    margin-bottom: 60px;
+    color: #333;
+    font-size: 46px;
+    font-weight: 500;
+    text-align: center;
+}
+#company_history>div>.history_tab{
+    display: block;
+    height: 30px;
+    margin: 0 auto 30px;
+    width: 650px;
+}
+#company_history>div>.history_tab>li{
+    float: left;
+    width: 120px;
+    margin: 0 20px;
+    color: #bebebe;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 400;
+    border-bottom: 3px solid #e9e9e9;
+    text-align: center;
+    cursor: pointer;
+}
+#company_history>div>.history_tab>li.on{
+    color: #ff6a00;
+    border-color: #ff6a00;
+}
+#company_history>div .history_list tr{
+    border-bottom: 1px solid #e1e1e1;
+}
+#company_history>div .history_list tr th{
+    width: 100px;
+    padding: 25px 0;
+    color: #333;
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 500;
+    text-align: center;
+}
+#company_history>div .history_list tr td.month{
+    width: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #333;
+    font-weight: 500;
+    font-size: 16px;
+}
+#company_history>div .history_list tr .his_ul li{
+    margin-top: 15px;
+}
+#company_history>div .history_list tr td{
+    padding: 30px 0;
+    color: #666;
+    font-size: 16px;
+    margin-top: 15px;
+    text-align: left;
+}
+#company_history>div .history_list table{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border-spacing: 0;
+    border: 0;
+    border-collapse: collapse;
+    word-break: break-all;
+}
+#company_history>div .history_list .history_table1,#company_history>div .history_list .history_table2{
+    float: left;
+    width: 520px;
+}
 
 
 @media all and ( max-width: 769px ){
